[package]
name = "querun"
version = "0.0.1"
edition = "2021"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dekirisu/querun/"
description = "Run querio structs on a redisgraph server"

[dependencies]
querio = {version="0.0.1", features = ["flatten","native_io"]}
querio_redisgraph = "0.0.1"
querun_derive = "0.0.1"

serde = { version="1.0.136", features=["derive"] }
serde_json = "1.0.82"
serde-redis = "0.12.0"
async-trait = "0.1.56"
derive-error = "0.0.5"
redis = { version = "^0.21.6", features = ["tokio-comp"] }

[dev-dependencies]
tokio = { version = "1.21.0", features = ["full"] }
redis = { version = "^0.21.6", features = ["connection-manager"] }

[patch.crates-io]
querun_derive = {path = "./derive"}

[workspace]
members = ["derive"]